# python-doc

./: .gitignore  README.md  poetry_cheat_sheet.md
01-Basics/: 01-Basics.md
01-Variables and Functions/: 01-Variables and Functions.md  args_kwargs.py
02-Numbers/: 02-Numbers.md
03-Bool/: 03-Bool.md
04-FlowControl/: 04-FlowControl.md  main.py
05-Collections/: 05-Collections.md  main.py
06-String/: 06-String.md  06A-Regular expressions.md  main.py
07-Files/: 07-Files path.md  07A-Files management.md  07B-JSON and YAML.md  already_exists.txt  main.py  output_data.json  weather_data.json
08-Exception handling/: 08-Exception handling.md  errorInfo.txt  main.py
13-Modules and Code packaging/phone-number-validator/: pyproject.toml
13-Modules and Code packaging/phone-number-validator/phone_number_validator/: usage_script.py
13-Modules and Code packaging/phone-number-validator/tests/: test_validator.py
15-SOLID principles/solid_demo/: pyproject.toml
15-SOLID principles/solid_demo/solid_demo/: dip_classes.py  isp_classes.py  lsp_classes.py  ocp_classes.py  srp_correct_classes.py  srp_wrong_classes.py
15-SOLID principles/solid_demo/solid_demo/ocp/src/: ocp_classes.py
15-SOLID principles/solid_demo/solid_demo/ocp/tests/: test_ocp_classes.py
15-SOLID principles/solid_demo/solid_demo/srp/tests/: test_srp_correct_classes.py  test_srp_wrong_classes.py
15-SOLID principles/solid_demo/solid_demo/tests/: test_dip_classes.py  test_isp_classes.py  test_lsp_classes.py  test_ocp_classes.py  test_srp_correct_classes.py  test_srp_wrong_classes.py
(+47 files in other folders)
