[tool.poetry]
name = "solid-demo"
version = "0.1.0"
description = ""
authors = ["Alessandro <pedano.alessandro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dict2xml = "^1.7.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
